--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup Node
         uses: actions/setup-node@v1
@@ -38,6 +38,12 @@ jobs:
     if: github.ref == 'refs/heads/main'
 
     steps:
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: build
+          path: build/
+          
       - name: Download artifact
         uses: actions/download-artifact@v2
         with:
